--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,8 @@ DB_URI=mongodb://localhost:27017/Mocks
 #DB_HOST=localhost
 #DB_NAME=conduit
 #DB_PORT=27017
+
+DISCORD_CLIENT_ID=...
+DISCORD_CLIENT_SECRET=...
+DISCORD_SCOPES=...
+DISCORD_CALLBACK_URL=...
