--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,17 @@
 {
+  "ts-node": {
+    "files": true
+  },
   "compilerOptions": {
     "esModuleInterop": true,
-    "target": "es2018",
+    "target": "es2021",
     "noImplicitAny": true,
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "sourceMap": true,
     "outDir": "build",
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
       "@@/*": ["./*"]
